--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.1
   go_router: ^15.1.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_lints: ^5.0.0
