--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   go_router: ^15.1.1
   equatable: ^2.0.7
+  formz: ^0.8.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
